Resolves: tdf#151468 honour tiff resolution fields

Change-Id: I57d996f49c6ae7e60991ff53eae867144b56d89d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141345
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>